fixed corners of ROA tabs rounded incorrectly when wrapped

--- a/styles/substances.module.scss
+++ b/styles/substances.module.scss
@@ -116,6 +116,11 @@
     justify-content: center;
     align-items: stretch;
 
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    // clip so border radius cuts off corners of child buttons
+    overflow: clip;
+
     button {
       border: none;
       padding: 10px 2px;
@@ -147,14 +152,6 @@
       }
       &:active {
         opacity: 0.7;
-      }
-
-      &:first-child {
-        border-top-left-radius: 6px;
-      }
-
-      &:last-child {
-        border-top-right-radius: 6px;
       }
     }
   }
